@@ -36,9 +36,9 @@ C consistent error handling
 C list.c: more efficient handling of line deletion
 B status.c: percentage wrong (all) in <tag>
 B fn_tag.c: taggin in an empty directory shouldn't tag
-B main.c: (get_annon_passwd) check for domainname (none), for . in hostname
 B display ftp response when login failes
 ----------------------------------------------- done
+B main.c: (get_annon_passwd) check for domainname (none), for . in hostname
 P ftp.c: include <sys/select.h> only if it exists (aix vs. linux)
 B ftp.c: (ftp_reconnect) print message before reconnecting
 
