@@ -1,5 +1,12 @@
 1997-10-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* main.c (main): --version and --help: conform to GNU standards.
+
+	* version.c (version): conform to GNU standards.
+
+	* main.c (get_annon_passwd): Handle domainname ``(none)'',
+	check for beginning dot, existing user, dot in hostname. 
+
 	* ftp.c (ftp_login): Set status.remote.path to NULL after freeing.
 
 	* status.c (status_do): Print space in "host... ...path".
